Changes in Caudium 1.5.1 since Caudium 1.4.1
---------------------------------------------
- Fixed a bug in gtext that would try to parse the empty tag (<>) if list of
  tags to get colors from was left empty in the CIF. This used to break
  javascript code.
  (Closes Google issue #4)
  (Bertrand LUPART and Bill Welliver)
- Make the watchdog more verbose in case it has to kick in in GET mode.
  (Bertrand LUPART)
- CIF documentation about module priorities made more clear.
  Reversed order of the select list: highest priority now on top.
  (Bertrand LUPART and Benjamin GANDON)
- Caudium now display the error code and message when it can't talk to the
  watchdog.
  (Bertrand LUPART)
- Caudium RC script now display Caudium startup error if any and just tell if
  startup failed.
  (Bertrand LUPART) 
- Redirects from 123session module should mangle the original URL less
  when browsing without cookies.
  (Bill Welliver with Dave Walton)
- Caudium modules now use pike -x module for building.
  (Bill Welliver)
- Caudium.HTTP.set_cookie() added for setting a cookie to the browser.
  <set_cookie> now use it.
  (Bertrand LUPART)
- Caudium.sexpr_eval("10 + 1") and Caudium.sexpr_eval("1+1") now produce the
  expected result.
  (Closes Google issue #2)
  (Bertrand LUPART)
- install app should get proper executable permissions
  (Bill Welliver)
- install app starts caudium in --once mode, which is more friendly if 
  there's a problem starting up.
  (Bill Welliver)
- configvar is no more (script is in bin but is non-working)
  (Bill Welliver)
- Proxies: Relay module (relay2.pike) now passes X-Forwarded-For
  header to destination.
  (Bill Welliver)
- Added new upgrade support system. Allows multiple installation or 
  virtual server upgrade tasks to be performed per version.
  (Bill Welliver)
- Fixed encoding generated by  _Caudium.*_encode_mapping() and 
  _Caudium._make_container_attributes().
  (Bill Welliver) 