@@ -1,5 +1,7 @@
 Changes in Caudium 1.5.1 since Caudium 1.4.1
 ---------------------------------------------
+- Added --dtruss support (MacOS X 10.5)
+  (Bertrand LUPART)
 - Fixed a bug in gtext that would try to parse the empty tag (<>) if list of
   tags to get colors from was left empty in the CIF. This used to break
   javascript code.
